@@ -28,7 +28,7 @@ use Cwd;
 our %build_reqs = (
 	'perl-ExtUtils-Depends'   => '0.300',
 	'perl-ExtUtils-PkgConfig' => '1.030',
-	'perl-Glib'               => '1.210', # FIXME: 1.22
+	'perl-Glib'               => '1.212', # FIXME: 1.22
 	'perl-Cairo'              => '1.000',
 	'pango'                   => '1.0.0',
 );
@@ -205,7 +205,8 @@ WriteMakefile(
 #
 sub MY::postamble
 {
-	return Glib::MakeHelper->postamble_clean ()
+	return Glib::MakeHelper->postamble_precompiled_headers (qw/pango-perl.h/)
+	     . Glib::MakeHelper->postamble_clean ()
 	     . Glib::MakeHelper->postamble_docs_full (
 			DEPENDS => $pango,
 			DOCTYPES => 'doctypes',
